--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
   margin: 0
 }
 
-body {
+html, body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
@@ -13,4 +13,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  padding-top: 10vh;
 }
