--- a/client/src/screens/BankAccountChild/BankAccountChild.module.css
+++ b/client/src/screens/BankAccountChild/BankAccountChild.module.css
@@ -3,3 +3,10 @@
     width: 18rem;
     margin: 0 auto 1rem auto
 }
+
+.newTransaction {
+    width: 60rem;
+    margin: 0 auto 1rem auto;
+    background-color: green;
+}
+
