--- a/client/src/screens/BankAccountChild/BankAccountChild.module.css
+++ b/client/src/screens/BankAccountChild/BankAccountChild.module.css
@@ -1,12 +1,25 @@
 
-.card {
-    width: 18rem;
-    margin: 0 auto 1rem auto
+#sectionAccount {
+   margin-top: 7rem;
+   height:  25rem;
 }
 
-.newTransaction {
-    width: 60rem;
+#card {
+    padding: 1rem;
+    text-align: center;
+    width: 40vw;
+    height: 15vh;
     margin: 0 auto 1rem auto;
-    background-color: green;
+    background-color: #cfe2ff;
+}
+
+#table {
+    margin: auto ;
+}
+
+
+#saveTransactionMessage {
+    margin: 2rem auto;
+    width: 40vw;
 }
 
