--- a/client/src/screens/BankAccountChild/BankAccountChild.module.css
+++ b/client/src/screens/BankAccountChild/BankAccountChild.module.css
@@ -1,17 +1,26 @@
 
-#sectionAccount {
-   margin-top: 7rem;
-   height:  25rem;
-}
+/* #sectionAccount {
+ 
+} */
+
 
 #card {
     padding: 1rem;
     text-align: center;
+    background-color: #f3f3f3; 
+    margin: 2rem auto 2rem auto;
     width: 30vw;
-    height: 15vh;
-    margin: 0 auto 1rem auto;
-    background-color: #cfe2ff;
 }
+
+#chartCard {
+    padding: 1rem;
+    text-align: center;
+    background-color: #f3f3f3; 
+    margin: 2rem auto 2rem auto;
+    width: 30vw;
+}
+
+
 
 #table {
     margin: auto ;
