WorldCup, flags mit redux toolkit

--- a/client/src/components/Screen/Screen.module.css
+++ b/client/src/components/Screen/Screen.module.css
@@ -1,4 +1,10 @@
 /* Monitor Screen */
+header {
+    margin-bottom: 2rem;
+}
+
+
+
 @media screen and (min-width: 992px )  {
     .container {
         display: flex;
