--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,13 @@
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0
+  margin: 0;
+  font-size: 14px
 }
 
 html, body {
   margin: 0;
+  height: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
 }
